Comments to explain compile problems in Eclipse